--- a/src/main/res/layout/content_main.xml
+++ b/src/main/res/layout/content_main.xml
@@ -19,14 +19,15 @@
         android:layout_height="wrap_content"
         android:text=".1.3.6.1.2.1"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:id="@+id/textViewOID" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/button"
-        android:layout_marginTop="70dp"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/buttonBack"
+        android:id="@+id/output">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,20 +38,37 @@
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner2"
+        android:id="@+id/spinnerMainSelector"
         android:layout_marginTop="54dp"
-        android:layout_toEndOf="@+id/button" />
-
+        android:layout_toEndOf="@+id/button"
+        android:layout_alignParentStart="true" />
 
 
     <Button
-        android:text="Button"
+        android:text="Forward"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:layout_alignBottom="@+id/spinner2"
+        android:id="@+id/buttonForward "
+        android:elevation="0dp"
+        android:layout_below="@+id/spinnerMainSelector"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:text="Back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonBack"
+        android:elevation="0dp"
+        android:layout_below="@+id/spinnerMainSelector"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MIB.iso.org.dod.internet.mgmt.mib-2"
+        android:layout_below="@+id/textViewOID"
         android:layout_alignParentStart="true"
-        android:layout_alignTop="@+id/spinner2"
-        android:elevation="0dp" />
+        android:layout_alignParentEnd="true"
+        android:id="@+id/textViewName" />
 
 </RelativeLayout>
