--- a/src/main/res/layout/content_main.xml
+++ b/src/main/res/layout/content_main.xml
@@ -14,61 +14,29 @@
     tools:context="com.example.marek.zst3.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=".1.3.6.1.2.1"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textViewOID" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/buttonBack"
-        android:id="@+id/output">
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textViewOID">
 
-        <LinearLayout
+        <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            app:srcCompat="@mipmap/mib"
+            android:id="@+id/imageView6"
+            android:adjustViewBounds="true" />
     </ScrollView>
-
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinnerMainSelector"
-        android:layout_marginTop="54dp"
-        android:layout_toEndOf="@+id/button"
-        android:layout_alignParentStart="true" />
-
-
-    <Button
-        android:text="Forward"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/buttonForward "
-        android:elevation="0dp"
-        android:layout_below="@+id/spinnerMainSelector"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        android:text="Back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/buttonBack"
-        android:elevation="0dp"
-        android:layout_below="@+id/spinnerMainSelector"
-        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="MIB.iso.org.dod.internet.mgmt.mib-2"
-        android:layout_below="@+id/textViewOID"
+        android:text="/?"
+        android:id="@+id/textViewOID"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/textViewName" />
+        android:textStyle="normal|bold" />
 
 </RelativeLayout>
