--- a/src/main/res/layout/content_main_selection.xml
+++ b/src/main/res/layout/content_main_selection.xml
@@ -24,5 +24,6 @@
         android:layout_height="wrap_content"
         android:text="Hello World!"
         android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:id="@+id/textContent" />
 </RelativeLayout>
