--- a/src/main/res/values/subfolders.xml
+++ b/src/main/res/values/subfolders.xml
@@ -13,6 +13,7 @@
     <string-array
         name="Interfaces">
         <item>ifNumber</item>
+        <item>ifTable</item>
     </string-array>
     <string-array
         name="Ip">
