--- a/src/main/res/values/translations.xml
+++ b/src/main/res/values/translations.xml
@@ -117,4 +117,122 @@
     <string name="hrSystemUptime">1.3.6.1.2.1.25.1.1</string>
     <string name="hrSystemDate">1.3.6.1.2.1.25.1.2</string>
 
+    <string name="o1.3.6.1.2.1.1.1">sysDescr</string>
+    <string name="o1.3.6.1.2.1.1.2">sysObjectID</string>
+    <string name="o1.3.6.1.2.1.1.3">sysUpTime</string>
+    <string name="o1.3.6.1.2.1.1.4">sysContact</string>
+    <string name="o1.3.6.1.2.1.1.5">sysName</string>
+    <string name="o1.3.6.1.2.1.1.6">sysLocation</string>
+    <string name="o1.3.6.1.2.1.1.7">sysServices</string>
+
+    <string name="o1.3.6.1.2.1.2.1">ifNumber</string>
+    <string name="o1.3.6.1.2.1.2.2">ifTable</string>
+
+    <string name="o1.3.6.1.2.1.4.1">ipForwarding</string>
+    <string name="o1.3.6.1.2.1.4.2">ipDefaultTTL</string>
+    <string name="o1.3.6.1.2.1.4.3">ipInReceives</string>
+    <string name="o1.3.6.1.2.1.4.4">ipInHdrErrors</string>
+    <string name="o1.3.6.1.2.1.4.5">ipInAddrErrors</string>
+    <string name="o1.3.6.1.2.1.4.6">ipForwDatagrams</string>
+    <string name="o1.3.6.1.2.1.4.7">ipInUnknownProtos</string>
+    <string name="o1.3.6.1.2.1.4.8">ipInDiscards</string>
+    <string name="o1.3.6.1.2.1.4.9">ipInDelivers</string>
+    <string name="o1.3.6.1.2.1.4.10">ipOutRequests</string>
+    <string name="o1.3.6.1.2.1.4.11">ipOutDiscards</string>
+    <string name="o1.3.6.1.2.1.4.12">ipOutNoRoutes</string>
+    <string name="o1.3.6.1.2.1.4.13">ipReasmTimeout</string>
+    <string name="o1.3.6.1.2.1.4.14">ipReasmReqds</string>
+    <string name="o1.3.6.1.2.1.4.15">ipReasmOKs</string>
+    <string name="o1.3.6.1.2.1.4.16">ipReasmFails</string>
+    <string name="o1.3.6.1.2.1.4.17">ipFragOKs</string>
+    <string name="o1.3.6.1.2.1.4.18">ipFragFails</string>
+    <string name="o1.3.6.1.2.1.4.19">ipFragCreates</string>
+    <string name="o1.3.6.1.2.1.4.20">ipAddrTable</string>
+    <string name="o1.3.6.1.2.1.4.21">ipRouteTable</string>
+    <string name="o1.3.6.1.2.1.4.22">ipNetToMediaTable</string>
+    <string name="o1.3.6.1.2.1.4.23">ipRoutingDiscards</string>
+
+    <string name="o1.3.6.1.2.1.5.1">icmpInMsgs</string>
+    <string name="o1.3.6.1.2.1.5.2">icmpInErrors</string>
+    <string name="o1.3.6.1.2.1.5.3">icmpInDestUnreachs</string>
+    <string name="o1.3.6.1.2.1.5.4">icmpInTimeExcds</string>
+    <string name="o1.3.6.1.2.1.5.5">icmpInParmProbs</string>
+    <string name="o1.3.6.1.2.1.5.6">icmpInSrcQuenchs</string>
+    <string name="o1.3.6.1.2.1.5.7">icmpInRedirects</string>
+    <string name="o1.3.6.1.2.1.5.8">icmpInEchos</string>
+    <string name="o1.3.6.1.2.1.5.9">icmpInEchoReps</string>
+    <string name="o1.3.6.1.2.1.5.10">icmpInTimestamps</string>
+    <string name="o1.3.6.1.2.1.5.11">icmpInTimestampReps</string>
+    <string name="o1.3.6.1.2.1.5.12">icmpInAddrMasks</string>
+    <string name="o1.3.6.1.2.1.5.13">icmpInAddrMaskReps</string>
+    <string name="o1.3.6.1.2.1.5.14">icmpOutMsgs</string>
+    <string name="o1.3.6.1.2.1.5.15">icmpOutErrors</string>
+    <string name="o1.3.6.1.2.1.5.16">icmpOutDestUnreachs</string>
+    <string name="o1.3.6.1.2.1.5.17">icmpOutTimeExcds</string>
+    <string name="o1.3.6.1.2.1.5.18">icmpOutParmProbs</string>
+    <string name="o1.3.6.1.2.1.5.19">icmpOutSrcQuenchs</string>
+    <string name="o1.3.6.1.2.1.5.20">icmpOutRedirects</string>
+    <string name="o1.3.6.1.2.1.5.21">icmpOutEchos</string>
+    <string name="o1.3.6.1.2.1.5.22">icmpOutEchoReps</string>
+    <string name="o1.3.6.1.2.1.5.23">icmpOutTimestamps</string>
+    <string name="o1.3.6.1.2.1.5.24">icmpOutTimestampReps</string>
+    <string name="o1.3.6.1.2.1.5.25">icmpOutAddrMasks</string>
+    <string name="o1.3.6.1.2.1.5.26">icmpOutAddrMaskReps</string>
+
+    <string name="o1.3.6.1.2.1.6.1">tcpRtoAlgorithm</string>
+    <string name="o1.3.6.1.2.1.6.2">tcpRtoMin</string>
+    <string name="o1.3.6.1.2.1.6.3">tcpRtoMax</string>
+    <string name="o1.3.6.1.2.1.6.4">tcpMaxConn</string>
+    <string name="o1.3.6.1.2.1.6.5">tcpActiveOpens</string>
+    <string name="o1.3.6.1.2.1.6.6">tcpPassiveOpens</string>
+    <string name="o1.3.6.1.2.1.6.7">tcpAttemptFails</string>
+    <string name="o1.3.6.1.2.1.6.8">tcpEstabResets</string>
+    <string name="o1.3.6.1.2.1.6.9">tcpCurrEstab</string>
+    <string name="o1.3.6.1.2.1.6.10">tcpInSegs</string>
+    <string name="o1.3.6.1.2.1.6.11">tcpOutSegs</string>
+    <string name="o1.3.6.1.2.1.6.12">tcpRetransSegs</string>
+    <string name="o1.3.6.1.2.1.6.13">tcpConnTable</string>
+    <string name="o1.3.6.1.2.1.6.14">tcpInErrs</string>
+    <string name="o1.3.6.1.2.1.6.15">tcpOutRsts</string>
+
+    <string name="o1.3.6.1.2.1.7.1">udpInDatagrams</string>
+    <string name="o1.3.6.1.2.1.7.2">udpNoPorts</string>
+    <string name="o1.3.6.1.2.1.7.3">udpInErrors</string>
+    <string name="o1.3.6.1.2.1.7.4">udpOutDatagrams</string>
+    <string name="o1.3.6.1.2.1.7.5">udpTable</string>
+
+    <string name="o1.3.6.1.2.1.11.1">snmpInPkts</string>
+    <string name="o1.3.6.1.2.1.11.2">snmpOutPkts</string>
+    <string name="o1.3.6.1.2.1.11.3">snmpInBadVersions</string>
+    <string name="o1.3.6.1.2.1.11.4">snmpInBadCommunityNames</string>
+    <string name="o1.3.6.1.2.1.11.5">snmpInBadCommunityUses</string>
+    <string name="o1.3.6.1.2.1.11.6">snmpInASNParseErrs</string>
+    <string name="o1.3.6.1.2.1.11.7">NOT_DEFINED</string>
+    <string name="o1.3.6.1.2.1.11.8">snmpInToo</string>Bigs
+    <string name="o1.3.6.1.2.1.11.9">snmpInNoSuchName</string>s
+    <string name="o1.3.6.1.2.1.11.10">snmpInBadValues</string>
+    <string name="o1.3.6.1.2.1.11.11">snmpInReadOnlys</string>
+    <string name="o1.3.6.1.2.1.11.12">snmpInGenErrs</string>
+    <string name="o1.3.6.1.2.1.11.13">snmpInTotalReqVars</string>
+    <string name="o1.3.6.1.2.1.11.14">snmpInTotalSetVars</string>
+    <string name="o1.3.6.1.2.1.11.15">snmpInGetRequests</string>
+    <string name="o1.3.6.1.2.1.11.16">snmpInGetNexts</string>
+    <string name="o1.3.6.1.2.1.11.17">snmpInSetRequests</string>
+    <string name="o1.3.6.1.2.1.11.18">snmpInGetResponses</string>
+    <string name="o1.3.6.1.2.1.11.19">snmpInTraps</string>
+    <string name="o1.3.6.1.2.1.11.20">snmpOutTooBigs</string>
+    <string name="o1.3.6.1.2.1.11.21">snmpOutNoSuchNames</string>
+    <string name="o1.3.6.1.2.1.11.22">snmpOutBadValues</string>
+    <string name="o1.3.6.1.2.1.11.23">NOT_DEFINED</string>
+    <string name="o1.3.6.1.2.1.11.24">snmpOutGenErrs</string>
+    <string name="o1.3.6.1.2.1.11.25">snmpOutGetRequests</string>
+    <string name="o1.3.6.1.2.1.11.26">snmpOutGetNexts</string>
+    <string name="o1.3.6.1.2.1.11.27">snmpOutSetRequests</string>
+    <string name="o1.3.6.1.2.1.11.28">snmpOutGetResponses</string>
+    <string name="o1.3.6.1.2.1.11.29">snmpOutTraps</string>
+    <string name="o1.3.6.1.2.1.11.30">snmpEnableAuthenTraps</string>
+
+    <string name="o1.3.6.1.2.1.25.1.1">hrSystemUptime</string>
+    <string name="o1.3.6.1.2.1.25.1.2">hrSystemDate</string>
+    <string name="o1.3.6.1.2.1.25.1.3">hrSystemInitialLoadDevice</string>
 </resources>
