--- a/src/main/res/layout/content_main_selection.xml
+++ b/src/main/res/layout/content_main_selection.xml
@@ -14,16 +14,17 @@
     tools:showIn="@layout/app_bar_main_selection">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView2"
-        style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem" />
+        style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
+        android:gravity="center" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
+        android:id="@+id/textContent"
         android:layout_below="@+id/textView2"
-        android:layout_alignParentStart="true"
-        android:id="@+id/textContent" />
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
